fix overflow issue with mobile site

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
